--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Movies App</string>
+    <string name="created_by_alimardon">Created by Alimardon</string>
 </resources>
